Update and rename app.json to APOLINAR/app.json

--- a/APOLINAR/app.json
+++ b/APOLINAR/app.json
@@ -14,10 +14,10 @@
   ],
   "buildpacks": [
     {
-      "COVID19,: "heroku/nodejs"
+      "COVID19": "heroku/nodejs"
     },
     {
-      "COVID19",: "heroku/nodejs"
+      "COVID19": "heroku/nodejs"
     }
   ]
 }
