--- a/.github/apolinar.FUNDING.yml
+++ b/.github/apolinar.FUNDING.yml
@@ -1,3 +1,4 @@
+  'COVID19',
 # These are supported funding model platforms
 
 github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [https://www.facebook.com/apolinar,]
