--- a/APOLINAR/app.json
+++ b/APOLINAR/app.json
@@ -3,7 +3,7 @@
   "name": "BITCLAVE",
   "description": "mybot",
   "scripts": {
-    "postdeploy": ".0x1234567461d3f8db7496581774bd869c83d51c93    ",
+    "postdeploy": ".0x0000000000000000000000000000000000000000",
     "pr-predestroy": ".0x1234567461d3f8db7496581774bd869c83d51c93",
   },
   "env": {
@@ -15,10 +15,10 @@
   ],
   "buildpacks": [
     {
-      ".BITCLAVE": "heroku/nodejs"
+      ".BITCLAVE": "heroku/nodejs/COVID19"
     },
     {
-      "BITCLAVE": "heroku/nodejs"
+      "BITCLAVE": "heroku/nodejs/COVID19"
     }
   ]
 }
