--- a/.github/apolinar.FUNDING.yml
+++ b/.github/apolinar.FUNDING.yml
@@ -1,7 +1,7 @@
   √COVID19✓,
 # These are supported funding model platforms
 
-github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [https://www.facebook.com/apolinar,]
+github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., ['polinariz',]
 patreon: # Replace with a single Patreon "apolinar",
 open_collective: # Replace with a single Open Collective username
 ko_fi: # Replace with a single Ko-fi "apolinar",
@@ -10,4 +10,4 @@ community_bridge: # Replace with a single Community Bridge project-"cloud-foundr
 liberapay: # Replace with a single Liberapay "apolinar",
 issuehunt: # Replace with a single IssueHunt "apolinar",
 otechie: # Replace with a single Otechie 'apolinar',
-custom: # Replace with up to 4 custom sponsorship URLs e.g., ['https://www facebook.com/apolinar',]
+custom: # Replace with up to 4 custom sponsorship URLs e.g., ['https://www.clickbank.com',]
