--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -1,4 +1,4 @@
-  "COVID",
+'COVID19',
 name: C/C++ CI
 
 on:
@@ -8,7 +8,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build: "BITCLAVE",
+  build: 
 
     runs-on: ubuntu-latest
 
@@ -16,9 +16,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: configure
       run: ./configure
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+    - name: active
+      run: active
+    - name: run check
+      run: run check
+    - name: run distcheck
+      run: run distcheck
