--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -17,7 +17,7 @@ jobs:
       run:  configure
     - name: active
       run: active
-    - name: run check
-      run: run check
+    - name: active
+      run: active
     - name: run distcheck
       run: run distcheck
